@@ -5,6 +5,7 @@
 - Fully support package selection/unselection and package set management via
 the CLI.
 - Update the dependencies for the RPM packages.
+- Fix a problem when selecting a packager set other than "Default".
 
 1.1.1:
 - Remove debugging messages.
